Fix paragraphs alignment in the About Us and Join Us pages (#7467)
* Align paragraphs in About and Join Us pages.

* update containers scss file

--- a/_sass/elements/_containers.scss
+++ b/_sass/elements/_containers.scss
@@ -26,6 +26,7 @@
 
         .sub-p {
             margin-top: 1rem;
+            width: 100%;
         }
     }
 
